# recorder

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: App.tsx  bindings.ts  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs  tray.rs  windows.rs
src-tauri/src/recorder/: convert.rs  mod.rs
