[package]
name = "recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
fltk = { version = "^1.4", features = ["fltk-bundled"] }
opencv = "0.93"                                          # For capturing the camera
image = "0.25"                                           # For image processing

xcap = { path = "../xcap" }
serde = { version = "1", features = ["derive"] }
vpx-encode = { path = "../../repos/vpx-encode", version = "0.6", features = ["vp9"] }
webm = "1"
